--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Maintenance Preventative Recurring Works Planner/Tracker",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "seed": "sequelize db:seed:all"
   },
   "repository": {
     "type": "git",
@@ -24,5 +25,8 @@
     "express": "^4.17.1",
     "mysql2": "^2.0.0",
     "sequelize": "^5.21.2"
+  },
+  "devDependencies": {
+    "sequelize-cli": "^5.5.1"
   }
 }
