--- a/package.json
+++ b/package.json
@@ -21,9 +21,15 @@
   },
   "homepage": "https://github.com/dmawardi/recurring-works#readme",
   "dependencies": {
+    "bcrypt": "^3.0.6",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-flash": "0.0.2",
+    "express-session": "^1.17.0",
+    "method-override": "^3.0.0",
     "mysql2": "^2.0.0",
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0",
     "sequelize": "^5.21.2"
   },
   "devDependencies": {
