--- a/package.json
+++ b/package.json
@@ -27,17 +27,21 @@
   },
   "homepage": "https://github.com/dmawardi/recurring-works#readme",
   "dependencies": {
+    "axios": "^0.19.0",
     "bcrypt": "^3.0.6",
     "concurrently": "^5.0.0",
+    "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-flash": "0.0.2",
     "express-session": "^1.17.0",
     "if-env": "^1.0.4",
-    "method-override": "^3.0.0",
+    "jsonwebtoken": "^8.5.1",
     "mysql2": "^2.0.0",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
+    "react-cookie": "^4.0.1",
+    "react-router-dom": "^5.1.2",
     "sequelize": "^5.21.2"
   },
   "devDependencies": {
