--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "express-session": "^1.17.0",
     "if-env": "^1.0.4",
     "jsonwebtoken": "^8.5.1",
+    "moment": "^2.24.0",
     "mysql2": "^2.0.0",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
