--- a/package.json
+++ b/package.json
@@ -47,6 +47,9 @@
     "react-router-dom": "^5.1.2",
     "sequelize": "^5.21.2"
   },
+  "engines": {
+    "node": "12.1.0"
+  },
   "devDependencies": {
     "sequelize-cli": "^5.5.1"
   }
