--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "start:dev": "concurrently \"nodemon --ignore 'client/*'\" \"npm run client\"",
     "client": "cd client && npm run start",
     "install": "cd client && npm install",
-    "build": "cd client && npm run build"
+    "build": "cd client && npm run build",
+    "heroku-postbuild": "npm run build",
+    "server": "node-env-run server --exec nodemon"
   },
   "repository": {
     "type": "git",
